Fix spacing classes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,64 +91,64 @@ header {
     padding: $spacing-4
 }
 .ma-1{
-    padding: $spacing-1;
+    margin: $spacing-1;
 }
 .ma-2{
-    padding: $spacing-2;
+    margin: $spacing-2;
 }
 .ma-3{
-    padding: $spacing-3;
+    margin: $spacing-3;
 }
 .ma-4{
-    padding: $spacing-4
+    margin: $spacing-4
 }
 .px-1{
-    padding: $spacing-1;
+    padding: 0 $spacing-1;
 }
 .px-2{
-    padding: $spacing-2;
+    padding: 0 $spacing-2;
 }
 .px-3{
-    padding: $spacing-3;
+    padding: 0 $spacing-3;
 }
 .px-4{
-    padding: $spacing-4
+    padding: 0 $spacing-4
 }
 .mx-1{
-    padding: $spacing-1;
+    margin: 0 $spacing-1;
 }
 .mx-2{
-    padding: $spacing-2;
+    margin: 0 $spacing-2;
 }
 .mx-3{
-    padding: $spacing-3;
+    margin: 0 $spacing-3;
 }
 .mx-4{
-    padding: $spacing-4
+    margin: 0 $spacing-4
 }
 .py-1{
-    padding: $spacing-1;
+    padding: $spacing-1 0;
 }
 .py-2{
-    padding: $spacing-2;
+    padding: $spacing-2 0;
 }
 .py-3{
-    padding: $spacing-3;
+    padding: $spacing-3 0;
 }
 .py-4{
-    padding: $spacing-4
+    padding: $spacing-4 0;
 }
 .my-1{
-    padding: $spacing-1;
+    margin: $spacing-1 0;
 }
 .my-2{
-    padding: $spacing-2;
+    margin: $spacing-2 0;
 }
 .my-3{
-    padding: $spacing-3;
+    margin: $spacing-3 0;
 }
 .my-4{
-    padding: $spacing-4
+    margin: $spacing-4 0;
 }
 
 
